# gaming-research

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  implementation.md  planning.md  pyproject.toml
docs/: core-kernel-design.md  current-program-algorithm.md  exhaustion-design.md  exhaustion-implementation-plan.md  exhaustion-points-plan.md  exhaustion-usage.md  exhaustion.txt  kernel-implementation-plan.md  loader-design.md  loader-implementation-plan.md
samples/: exhaustion_default.csv  exhaustion_default.metadata.json  exhaustion_spec.example.json  worksheet1.csv
src/gaming_research/: __init__.py
src/gaming_research/exhaustion/: __init__.py  __main__.py  cli.py  enumerate.py  runner.py  spec.py  writer.py
src/gaming_research/kernel/: __init__.py  api.py  bluffing.py  derived.py  gt.py  types.py  validation.py
src/gaming_research/loader/: __init__.py  __main__.py  cli.py  reader.py  runner.py  schema.py  writer.py
tests/: test_bluffing_compat.py  test_bluffing_research.py  test_evaluate_case.py  test_exhaustion_cli_spec_file.py  test_exhaustion_end_to_end.py  test_exhaustion_enumerate.py  test_exhaustion_spec.py  test_exhaustion_spec_loader.py  test_exhaustion_writer.py  test_gt.py  test_loader_end_to_end.py  test_loader_reader.py  test_loader_writer.py  test_validation.py
tests/fixtures/exhaustion/: expected_cases.csv  expected_metadata.json  points_spec.json  tiny_spec.py  v1_spec.json  v2_spec.json
tests/fixtures/loader/: expected_output.csv  input.csv
