[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gaming-research"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["scipy"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/gaming_research"]

[tool.pytest.ini_options]
testpaths = ["tests"]
