[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gaming-research"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["scipy>=1.9"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["src/gaming_research"]

[tool.pytest.ini_options]
testpaths = ["tests"]
